<resources>
    <string name="app_name">SelfProject</string>
    <string name="scheduling_app">Scheduling App</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="login_page_text">Login Page</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="back_button">Back</string>
    <string name="client_register_page_textView">Client Register Page</string>
    <string name="username_hint">Username</string>
    <string name="register_button">Register</string>
    <string name="pro_login_button_text">Professional</string>
    <string name="client_button_text">Client</string>
    <string name="client_login_page_textView">Client Login Page</string>
    <string name="pro_register_page_textView">Professional Register Page</string>
    <string name="pro_login_page_textView">Professional Login Page</string>
    <string name="client_login_page_text">Client Login Page</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="find_professional">Find Professional</string>
    <string name="find_professional_button">Find Professional</string>
    <string name="find_user_hint">Enter Shareable Code</string>
    <string name="client_home_title">Client Home</string>
    <string name="professional_page_client_view">Professional Page Client View</string>
    <string name="pro_login_page_text">Professional Login Page</string>
    <string name="professional_home_page">Professional Home</string>
    <string name="pro_name">Pro Name</string>
    <string name="client_name">Client Name</string>
    <string name="settings_button">Settings</string>
    <string name="shareable_code">shareable code</string>
    <string name="favorite_button">favorite button</string>
    <string name="pro_email">pro email</string>
    <string name="internet">Internet</string>
    <string name="volume">Volume</string>
    <string name="nfc">nfc</string>
    <string name="update_name">Update Name</string>
    <string name="email_update_user">Email</string>
    <string name="name_update_user">Name</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">Update Password</string>
    <string name="password_update_user">Password</string>
    <string name="update_phone">Update Phone Number</string>
    <string name="phone_update_user">Phone</string>
    <string name="open_time_slots">Available Times</string>
    <string name="address">Address</string>
    <string name="pro_info_description">last name, first name - occupation</string>
    <string name="calendar">Calendar</string>
    <string name="save_button">Save</string>
    <string name="zip_code_update_pro">Zip Code</string>
    <string name="zip_code_hint">Zip Code</string>
    <string name="state_update_pro">State</string>
    <string name="city_update_pro">City</string>
    <string name="street_number_update_pro">Street Number</string>
    <string name="address_update_pro">Address</string>
    <string name="profession_update_pro">Profession</string>
    <string name="last_name_update_pro">Last Name</string>
    <string name="first_name_update_pro">First Name</string>
    <string name="viewAcctInfoButton">Update Account</string>
    <string name="streetName_update_pro">Street Name</string>
    <string name="logout">Logout</string>
</resources>