<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".ClientLoginActivity">



    <ProgressBar
        android:id="@+id/client_login_progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_login_page_text"
            android:textSize="25sp"
            android:fontFamily="cursive"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/client_email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Email" />

        <EditText
            android:id="@+id/client_password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Password" />

        <Button
            android:id="@+id/client_login_button"
            android:text="@string/login_button_text"
            android:backgroundTint="@color/black"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/client_back_button_la"
            android:text="@string/back_button"
            android:backgroundTint="@color/black"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/client_register"
            android:text="@string/register_button"
            android:backgroundTint="@color/black"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>