<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SettingsPane">


    <Button
        android:textAllCaps="false"
        android:id="@+id/internetButton"
        android:text="@string/internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:textAllCaps="false"
        android:id="@+id/volumeButton"
        android:text="@string/volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:textAllCaps="false"
        android:id="@+id/nfcButton"
        android:text="@string/nfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>





</LinearLayout>