<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientRegisterAccountActivity">

    <ProgressBar
        android:id="@+id/register_progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/acct_register"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/create_account_textView"
            android:text="@string/client_register_page_textView"
            android:textSize="25sp"
            android:fontFamily="cursive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/username_ra"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Username" />

        <EditText
            android:id="@+id/email_ra"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Email"/>

        <EditText
            android:id="@+id/password_ra"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Password"/>

        <Button
            android:id="@+id/register_button_ra"
            android:text="@string/register_button"
            android:backgroundTint="@color/black"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/back_button_ra"
            android:text="@string/back_button"
            android:backgroundTint="@color/black"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>