<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".ClientHomeActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settings_button_ch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/white"
        android:layout_gravity="end"
        android:src="@drawable/baseline_settings_white_18dp"
        android:contentDescription="@string/settings_button" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"/>


    <TextView
        android:id="@+id/upcoming_appointments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingBottom="20dp"
        android:text="@string/upcoming_appointments"
        android:textSize="25sp" />


    <ListView
        android:id="@+id/client_list_view"
        android:layout_width="match_parent"
        android:layout_height="250dp" />


    <TextView
        android:id="@+id/find_professional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/find_professional"
        android:textStyle="bold"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/find_pro_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/find_user_hint"
        android:inputType="textPersonName"
        android:paddingTop="10dp"
        android:autofillHints="Find Professional"/>

    <Button
        android:id="@+id/find_pro_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/find_professional_button" />

</LinearLayout>
